--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.23.2",
     "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
